Put e delete de User implementado