@@ -8,9 +8,11 @@ import com.workshop.workshopmongo.dto.UserDTO;
 import com.workshop.workshopmongo.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -25,17 +27,14 @@ public class UserResource {
     
     @GetMapping
     public ResponseEntity<List<UserDTO>> findAll() {        
-        List<User> list = service.findAll();        
-        List<UserDTO> listDTO = list.stream()
-                .map( u -> new UserDTO(u))
-                .collect(Collectors
-                .toList());
+        final List<User> list = service.findAll();
+        final List<UserDTO> listDTO = list.stream().map(u -> new UserDTO(u)).collect(Collectors.toList());
         return ResponseEntity.ok().body(listDTO);
     }
 
     @GetMapping("{id}")
-    public ResponseEntity<UserDTO> findById(@PathVariable String id){
-        User obj = service.findById(id);
+    public ResponseEntity<UserDTO> findById(@PathVariable final String id) {
+        final User obj = service.findById(id);
         return ResponseEntity.ok().body(new UserDTO(obj));
     }
 
@@ -45,5 +44,19 @@ public class UserResource {
         obj = service.insert(obj);
         URI uri = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(obj.getId()).toUri();
         return ResponseEntity.created(uri).build();
+    }
+
+    @DeleteMapping("{id}")
+    public ResponseEntity<Void> delete(@PathVariable String id){
+        service.delete(id);
+        return ResponseEntity.noContent().build();
+    }
+
+    @PutMapping("{id}")
+    public ResponseEntity<Void> update(@RequestBody UserDTO userDTO, @PathVariable String id){
+        User obj = service.fromDTO(userDTO);
+        obj.setId(id);
+        obj = service.update(obj);
+        return ResponseEntity.noContent().build();
     }
 }
